--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,53 @@ body {
   background-color: #fff;
   color: blue;
   padding: 5px; }
+
+.explore-page {
+  background-image: url("../img/explore.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 700px; }
+  .explore-page-inner {
+    padding-top: 130px; }
+  .explore-page .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background: rgba(0, 0, 0, 0.7); }
+  .explore-page .btn-black {
+    background-color: black; }
+
+#service .card {
+  height: 300px;
+  position: relative; }
+  #service .card > img {
+    width: 100%;
+    height: 100%; }
+  #service .card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 700px;
+    background: rgba(0, 0, 0, 0.7);
+    height: 300px; }
+
+@media screen and (max-width: 575px) {
+  .explore-page {
+    height: 500px;
+    text-align: center; }
+    .explore-page .overlay {
+      height: 500px; }
+    .explore-page-inner h2 {
+      font-size: 3rem; }
+    .explore-page-inner .btn-lg {
+      padding: .2rem .5rem; } }
+
+@media screen and (max-width: 414px) {
+  .explore-page-inner h2 {
+    font-size: 2rem; }
+  .explore-page-inner .btn-lg {
+    font-size: 1rem; } }
