--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,15 @@
     border-radius: 5px;
 }
 
+@mixin overlay() {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:700px;
+    background:rgba(0,0,0,0.7);
+}
+
 body{
     background:#333;
     color:#fff;
@@ -31,12 +40,7 @@ body{
     height:700px;
 
     .overlay{
-        position:absolute;
-        top:0;
-        left:0;
-        width:100%;
-        height:700px;
-        background:rgba(0,0,0,0.7);
+       @include overlay;
     }
     &-inner{
         padding-top: 130px;
@@ -66,6 +70,80 @@ body{
     }
 }
 
+.explore-page{
+    background-image: url('../img/explore.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-attachment:fixed;
+    height:700px;
 
+    &-inner{
+        padding-top: 130px;
+    }
+
+    .overlay{
+       @include overlay;
+    }
+    .btn-black{
+        background-color: black;
+
+    }
+}
+
+
+#service{
+    .card{
+        height: 300px;
+        position: relative;
+        >img{
+            width: 100%;
+            height: 100%;
+            
+        }
+        .overlay{
+            @include overlay;
+            height: 300px;
+        }
+      
+    }
+}
+
+@media screen and (max-width:575px){
+.explore-page{
+    height: 500px;
+    text-align: center;
+    .overlay{
+        height: 500px;
+    }
+ 
+    &-inner{
+        h2{
+            font-size: 3rem;
+        }
+        .btn-lg{
+            padding: .2rem .5rem;
+    
+        }
+    }
+
+}
+}
+
+@media screen and (max-width:414px){
+    .explore-page{
+        
+     
+        &-inner{
+            h2{
+                font-size: 2rem;
+            }
+            .btn-lg{
+                
+                font-size: 1rem;
+            }
+        }
+    
+    }
+    }
 
 // @import "node_modules/bootstrap/scss/bootstrap";
